--- a/FrontPersonasVulnerables/styles.css
+++ b/FrontPersonasVulnerables/styles.css
@@ -60,6 +60,13 @@ h2 {
   gap: 12px;
 }
 
+#registerForm {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
 .content-row img {
   width: 250px;
   height: auto;
